--- a/Intel.MyDeals/Client/src/app/contract/tenderFolio/tenderFolio.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/tenderFolio/tenderFolio.component.css
@@ -65,7 +65,7 @@
     width: 100% !important;
     max-width: none !important;
     height: 39px !important;
-    margin-bottom: 20px;
+    /*margin-bottom: 20px;*/
 }
 
 .tender-modals .combobox, .tender-modals .inputtext {
